# factomove

./: README.md
factomove_description/: CMakeLists.txt  package.xml
factomove_description/meshes/: back_left_keeper_link.STL  back_left_wheel_link.STL  back_right_keeper_link.STL  base_link.STL  base_scan.STL  front_left_keeper_link.STL  front_right_keeper_link.STL  front_right_wheel_link.STL  left_wheel_link.STL  mid_left_wheel_link.STL  mid_right_wheel_link.STL  right_wheel_link.STL
factomove_description/rviz/: factomove_rv.rviz  model.rviz
factomove_description/urdf/: _d435.urdf.xacro  diff_drive_controller.gazebo.xacro  factomove.gazebo  factomove.gazebo.xacro  factomove.urdf.xacro  factomove.xacro  hokuyo_lidar.gazebo.xacro  hokuyo_lidar.urdf.xacro
factomove_navigation/: CMakeLists.txt  package.xml
factomove_navigation/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml
factomove_navigation/launch/: amcl.launch  factomove_bringup.launch  move_base.launch  navigation.launch
factomove_navigation/maps/: factory_map_full_last.pgm  factory_map_full_last.yaml  full_zavod_last_last.yaml  kvant_map.pgm  kvant_map.yaml  map.yaml  mymap.pgm
factomove_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
factomove_rtabmap/: CMakeLists.txt  package.xml
factomove_rtabmap/launch/: factomove_rtabmap.launch
factomove_scan_filter/: CMakeLists.txt  package.xml
factomove_scan_filter/config/: my_laser_config.yaml
factomove_scan_filter/launch/: factomove_scan_filter.launch
factomove_simulation/: CMakeLists.txt  package.xml
factomove_simulation/launch/: factomove_empty_wordl.launch  factomove_empty_world.launch  factomove_move_base.launch  factomove_workshop.launch
factomove_simulation/worlds/: test_flat.world
factomove_slam/: CMakeLists.txt  package.xml
factomove_slam/config/: gmapping_params.yaml
factomove_slam/launch/: factomove_gmapping.launch
factomove_teleop/: CMakeLists.txt  package.xml
factomove_teleop/launch/: factomove_teleop.launch
factomove_teleop/src/: factomove_teleop.cpp  factomove_teleop.h
mir_navigation/: package.xml
mir_navigation/config/: costmap_common_params.yaml  costmap_local_params.yaml  dwb_local_planner_params.yaml  move_base_common_params.yaml  sbpl_global_params.yaml
mir_navigation/launch/: move_base.xml  start_maps.launch  start_planner.launch
mir_navigation/nodes/: acc_finder.py  min_max_finder.py
mir_navigation/rviz/: navigation.rviz
mir_navigation/scripts/: plot_mprim.py
realsense2_description/urdf/: _d415.urdf.xacro  _d435.gazebo.xacro
