<?xml version="1.0"?>
<package format="2">
  <name>factomove_description</name>
  <version>0.0.1</version>
  <description>
    3D models of the Factomove for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <author email="fedor2847@fmail.com">Fedor</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>