<?xml version="1.0"?>
<package format="2">
  <name>factomove_rtabmap</name>
  <version>0.0.1</version>
  <description>
    The mapping by depth camera.
  </description>
  <license>Apache 2.0</license>
   <maintainer email="fedor2847@gmail.com">Fedor</maintainer>
  <maintainer email="vladparhachev777@gmail.com">Vladislav</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rtabmap_ros</exec_depend>
</package>
