<?xml version="1.0"?>
<package format="2">
  <name>factomove_simulation</name>
  <version>0.0.1</version>
  <description>
    Gazebo simulation package for the Factomove
  </description>
  <license>Apache 2.0</license>
  <maintainer email="fedor2847@gmail.com">Fedor</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>factomove_description</exec_depend>
  <exec_depend>factomove_slam</exec_depend>
  <exec_depend>factomove_teleop</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>