<?xml version="1.0"?>
<package format="2">
  <name>factomove_slam</name>
  <version>0.0.1</version>
  <description>
    The factomove_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache 2.0</license>
   <maintainer email="fedor2847@gmail.com">Fedor</maintainer>
  <maintainer email="vladparhachev777@gmail.com">Vladislav</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>